# life-diary-archive

./: .gitignore  LICENSE  README.md  TODO  Todo  main.py  pyproject.toml  requirements.txt  run_claude_deepseek_flash.bat  run_diary.bat  yaoqiu.txt
.tmp_testdata/manual_pdf_probe/: probe.docx
android/: README.md
android/LifeDiaryMobile/: CMakeLists.txt  build_android_arm64.bat
android/LifeDiaryMobile/android/: AndroidManifest.xml
android/LifeDiaryMobile/android/res/values/: strings.xml
android/LifeDiaryMobile/android/src/com/localfirst/lifediary/: LifeDiaryActivity.java  LifeDiaryShare.java
android/LifeDiaryMobile/qml/: BookPage.qml  DataManagerPage.qml  DiaryPage.qml  FootprintPage.qml  HomePage.qml  LightResourcePage.qml  LightThoughtPage.qml  Main.qml  PlanPage.qml  SelfObservationPage.qml
android/LifeDiaryMobile/qml/components/: ImageListEditor.qml  RecordCard.qml  qmldir
android/LifeDiaryMobile/src/: ArchiveStore.cpp  ArchiveStore.h
diary_android/: .gitignore  CMakeLists.txt  README.md  build_android_arm64.bat  build_desktop.bat
diary_android/qml/: BookPage.qml  DiaryPage.qml  PlanPage.qml
diary_android/src/: main.cpp
docs/dev-notes/: footprint_module_plan.txt
docs/release-notes/: v0.2.0.md
packaging/windows/: LifeDiary.spec  LifeDiaryInstaller.spec  README.md  installer.py
scripts/: build_android.md  build_windows.ps1  run_diary.bat
src/life_dairy/: app.py  autosave.py  backup_service.py  book_page.py  book_storage.py  data_manager_page.py  diary_page.py  exchange.py  exporters.py  footprint_page.py  footprint_storage.py  lesson_page.py  lesson_storage.py  main_window.py  models.py  observation_page.py  observation_storage.py  overview.py  overview_page.py  plan_page.py  plan_storage.py  resource_page.py  resource_storage.py  self_analysis_page.py  self_analysis_storage.py  storage.py  thought_page.py  thought_storage.py  ui_helpers.py  work_page.py  work_storage.py
tests/: test_autosave.py  test_backup_service.py  test_book_storage.py  test_desktop3_storage.py  test_exchange.py  test_exporters.py  test_footprint_storage.py  test_lesson_storage.py  test_main_window.py  test_overview.py  test_plan_storage.py  test_self_analysis_storage.py  test_storage.py  test_work_storage.py
(+625 files in other folders)
