[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "life-diary-archive"
version = "0.2.0"
description = "Local-first diary, footprint, reading notes, and lightweight planning app."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PySide6>=6.11,<7",
    "python-docx>=1.1,<2",
]

[project.scripts]
life-diary = "life_dairy.app:main"

[tool.setuptools.packages.find]
where = ["src"]
